grasp-core/src/main/java/grasp/lang/grammar/GraspParser.java
// $ANTLR 3.5.2 Grasp.g 2015-01-03 18:40:23

	package grasp.lang.grammar;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


/**
 * Grasp grammar in ANTLR notation. This contains the BNF-like parser grammar as well
 * as tree rewriting grammar for generating an easy to traverse AST.
 * Note: This grammar is written in ANTLR 3.4 notation.
 *
 * @author		Lakshitha de Silva
 * 
 * @version		1.3, 2013/02/13
 * 
 */
@SuppressWarnings("all")
public class GraspParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACCEPTS", "ADD", "ALPHANUMERIC_CHAR", 
		"ALPHA_CHAR", "AND", "ANNOTATION", "ARCHITECTURE", "ARGS", "AUG", "BARGS", 
		"BASE", "BASIS", "BECAUSE", "BLOCK_COMMENT", "BODY", "BOOLEAN", "BOOLEAN_LITERAL", 
		"CHECK", "CMP", "COMPONENT", "CON", "CONNECTOR", "CONSUMER", "DECIMAL_DIGIT", 
		"DECL", "DIS", "DIV", "DOUBLE_QUOTE_TEXT", "EQL", "ESC_SEQUENCE", "EXPR", 
		"EXTENDS", "FALSE", "FIELD", "FUNCTION", "GTE", "GTN", "HANDLER", "HEX_DIGIT", 
		"ICALLIN", "ICALLOUT", "IDENTIFIER", "IFTYPE", "INHIBITS", "INLINE_COMMENT", 
		"INTEGER", "INTEGER_LITERAL", "IOR", "LAYER", "LINK", "LTE", "LTN", "MAXDEG", 
		"MEMB", "MOD", "MUL", "NAG", "NAME", "NAMEDVALUE", "NEG", "NEQ", "NEWLINE_CHAR", 
		"NOT", "OVER", "PAIR", "PARMS", "PAYLOAD", "POS", "PROPERTY", "PROVIDERS", 
		"PROVIDES", "QATTRIBUTE", "RATIONALE", "REAL", "REAL_LITERAL", "REASON", 
		"REQUIREMENT", "REQUIRES", "SET", "SINGLE_QUOTE_TEXT", "STRING", "STRING_LITERAL", 
		"SUB", "SUBSETOF", "SUPPORTS", "SYSTEM", "TEMPLATE", "TEXT", "TRUE", "WHITESPACE", 
		"WHITESPACE_CHAR", "XOR", "'('", "')'", "','", "'.'", "':'", "';'", "'='", 
		"'@'", "'['", "']'", "'architecture'", "'because'", "'check'", "'component'", 
		"'connector'", "'extends'", "'in'", "'inhibits'", "'layer'", "'link'", 
		"'out'", "'over'", "'property'", "'provides'", "'quality_attribute'", 
		"'rationale'", "'reason'", "'requirement'", "'requires'", "'supports'", 
		"'system'", "'template'", "'to'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__96=96;
	public static final int T__97=97;
	public static final int T__98=98;
	public static final int T__99=99;
	public static final int T__100=100;
	public static final int T__101=101;
	public static final int T__102=102;
	public static final int T__103=103;
	public static final int T__104=104;
	public static final int T__105=105;
	public static final int T__106=106;
	public static final int T__107=107;
	public static final int T__108=108;
	public static final int T__109=109;
	public static final int T__110=110;
	public static final int T__111=111;
	public static final int T__112=112;
	public static final int T__113=113;
	public static final int T__114=114;
	public static final int T__115=115;
	public static final int T__116=116;
	public static final int T__117=117;
	public static final int T__118=118;
	public static final int T__119=119;
	public static final int T__120=120;
	public static final int T__121=121;
	public static final int T__122=122;
	public static final int T__123=123;
	public static final int T__124=124;
	public static final int T__125=125;
	public static final int T__126=126;
	public static final int T__127=127;
	public static final int T__128=128;
	public static final int T__129=129;
	public static final int T__130=130;
	public static final int ACCEPTS=4;
	public static final int ADD=5;
	public static final int ALPHANUMERIC_CHAR=6;
	public static final int ALPHA_CHAR=7;
	public static final int AND=8;
	public static final int ANNOTATION=9;
	public static final int ARCHITECTURE=10;
	public static final int ARGS=11;
	public static final int AUG=12;
	public static final int BARGS=13;
	public static final int BASE=14;
	public static final int BASIS=15;
	public static final int BECAUSE=16;
	public static final int BLOCK_COMMENT=17;
	public static final int BODY=18;
	public static final int BOOLEAN=19;
	public static final int BOOLEAN_LITERAL=20;
	public static final int CHECK=21;
	public static final int CMP=22;
	public static final int COMPONENT=23;
	public static final int CON=24;
	public static final int CONNECTOR=25;
	public static final int CONSUMER=26;
	public static final int DECIMAL_DIGIT=27;
	public static final int DECL=28;
	public static final int DIS=29;
	public static final int DIV=30;
	public static final int DOUBLE_QUOTE_TEXT=31;
	public static final int EQL=32;
	public static final int ESC_SEQUENCE=33;
	public static final int EXPR=34;
	public static final int EXTENDS=35;
	public static final int FALSE=36;
	public static final int FIELD=37;
	public static final int FUNCTION=38;
	public static final int GTE=39;
	public static final int GTN=40;
	public static final int HANDLER=41;
	public static final int HEX_DIGIT=42;
	public static final int ICALLIN=43;
	public static final int ICALLOUT=44;
	public static final int IDENTIFIER=45;
	public static final int IFTYPE=46;
	public static final int INHIBITS=47;
	public static final int INLINE_COMMENT=48;
	public static final int INTEGER=49;
	public static final int INTEGER_LITERAL=50;
	public static final int IOR=51;
	public static final int LAYER=52;
	public static final int LINK=53;
	public static final int LTE=54;
	public static final int LTN=55;
	public static final int MAXDEG=56;
	public static final int MEMB=57;
	public static final int MOD=58;
	public static final int MUL=59;
	public static final int NAG=60;
	public static final int NAME=61;
	public static final int NAMEDVALUE=62;
	public static final int NEG=63;
	public static final int NEQ=64;
	public static final int NEWLINE_CHAR=65;
	public static final int NOT=66;
	public static final int OVER=67;
	public static final int PAIR=68;
	public static final int PARMS=69;
	public static final int PAYLOAD=70;
	public static final int POS=71;
	public static final int PROPERTY=72;
	public static final int PROVIDERS=73;
	public static final int PROVIDES=74;
	public static final int QATTRIBUTE=75;
	public static final int RATIONALE=76;
	public static final int REAL=77;
	public static final int REAL_LITERAL=78;
	public static final int REASON=79;
	public static final int REQUIREMENT=80;
	public static final int REQUIRES=81;
	public static final int SET=82;
	public static final int SINGLE_QUOTE_TEXT=83;
	public static final int STRING=84;
	public static final int STRING_LITERAL=85;
	public static final int SUB=86;
	public static final int SUBSETOF=87;
	public static final int SUPPORTS=88;
	public static final int SYSTEM=89;
	public static final int TEMPLATE=90;
	public static final int TEXT=91;
	public static final int TRUE=92;
	public static final int WHITESPACE=93;
	public static final int WHITESPACE_CHAR=94;
	public static final int XOR=95;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public GraspParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public GraspParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return GraspParser.tokenNames; }
	@Override public String getGrammarFileName() { return "Grasp.g"; }


	public static class start_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "start"
	// Grasp.g:127:1: start : architecture_statement ;
	public final GraspParser.start_return start() throws RecognitionException {
		GraspParser.start_return retval = new GraspParser.start_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope architecture_statement1 =null;


		try {
			// Grasp.g:128:2: ( architecture_statement )
			// Grasp.g:128:4: architecture_statement
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_architecture_statement_in_start498);
			architecture_statement1=architecture_statement();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, architecture_statement1.getTree());

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "start"


	public static class architecture_statement_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "architecture_statement"
	// Grasp.g:134:1: architecture_statement : ( annotation )* kw= 'architecture' name= IDENTIFIER '{' ( declarational_statement )* system_statement ( declarational_statement )* '}' -> ^( ARCHITECTURE[$kw] ( annotation )* ^( NAME $name) ^( BODY ( declarational_statement )* system_statement ) ) ;
	public final GraspParser.architecture_statement_return architecture_statement() throws RecognitionException {
		GraspParser.architecture_statement_return retval = new GraspParser.architecture_statement_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token kw=null;
		Token name=null;
		Token char_literal3=null;
		Token char_literal7=null;
		ParserRuleReturnScope annotation2 =null;
		ParserRuleReturnScope declarational_statement4 =null;
		ParserRuleReturnScope system_statement5 =null;
		ParserRuleReturnScope declarational_statement6 =null;

		CommonTree kw_tree=null;
		CommonTree name_tree=null;
		CommonTree char_literal3_tree=null;
		CommonTree char_literal7_tree=null;
		RewriteRuleTokenStream stream_106=new RewriteRuleTokenStream(adaptor,"token 106");
		RewriteRuleTokenStream stream_129=new RewriteRuleTokenStream(adaptor,"token 129");
		RewriteRuleTokenStream stream_IDENTIFIER=new RewriteRuleTokenStream(adaptor,"token IDENTIFIER");
		RewriteRuleTokenStream stream_130=new RewriteRuleTokenStream(adaptor,"token 130");
		RewriteRuleSubtreeStream stream_annotation=new RewriteRuleSubtreeStream(adaptor,"rule annotation");
		RewriteRuleSubtreeStream stream_declarational_statement=new RewriteRuleSubtreeStream(adaptor,"rule declarational_statement");
		RewriteRuleSubtreeStream stream_system_statement=new RewriteRuleSubtreeStream(adaptor,"rule system_statement");

		try {
			// Grasp.g:135:2: ( ( annotation )* kw= 'architecture' name= IDENTIFIER '{' ( declarational_statement )* system_statement ( declarational_statement )* '}' -> ^( ARCHITECTURE[$kw] ( annotation )* ^( NAME $name) ^( BODY ( declarational_statement )* system_statement ) ) )
			// Grasp.g:135:4: ( annotation )* kw= 'architecture' name= IDENTIFIER '{' ( declarational_statement )* system_statement ( declarational_statement )* '}'
			{
			// Grasp.g:135:4: ( annotation )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==103) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// Grasp.g:135:4: annotation
					{
					pushFollow(FOLLOW_annotation_in_architecture_statement512);
					annotation2=annotation();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_annotation.add(annotation2.getTree());
					}
					break;

				default :
					break loop1;
				}
			}

			kw=(Token)match(input,106,FOLLOW_106_in_architecture_statement517); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_106.add(kw);

			name=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_architecture_statement521); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_IDENTIFIER.add(name);

			char_literal3=(Token)match(input,129,FOLLOW_129_in_architecture_statement523); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_129.add(char_literal3);

			// Grasp.g:135:54: ( declarational_statement )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==103) ) {
					int LA2_1 = input.LA(2);
					if ( (synpred2_Grasp()) ) {
						alt2=1;
					}

				}
				else if ( ((LA2_0 >= 120 && LA2_0 <= 121)||LA2_0==123||LA2_0==127) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// Grasp.g:135:54: declarational_statement
					{
					pushFollow(FOLLOW_declarational_statement_in_architecture_statement525);
					declarational_statement4=declarational_statement();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_declarational_statement.add(declarational_statement4.getTree());
					}
					break;

				default :
					break loop2;
				}
			}

			pushFollow(FOLLOW_system_statement_in_architecture_statement528);
			system_statement5=system_statement();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_system_statement.add(system_statement5.getTree());
			// Grasp.g:135:96: ( declarational_statement )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==103||(LA3_0 >= 120 && LA3_0 <= 121)||LA3_0==123||LA3_0==127) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// Grasp.g:135:96: declarational_statement
					{
					pushFollow(FOLLOW_declarational_statement_in_architecture_statement530);
					declarational_statement6=declarational_statement();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_declarational_statement.add(declarational_statement6.getTree());
					}
					break;

				default :
					break loop3;
				}
			}

			char_literal7=(Token)match(input,130,FOLLOW_130_in_architecture_statement533); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_130.add(char_literal7);

			// AST REWRITE
			// elements: annotation, declarational_statement, system_statement, name
			// token labels: name
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleTokenStream stream_name=new RewriteRuleTokenStream(adaptor,"token name",name);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 136:4: -> ^( ARCHITECTURE[$kw] ( annotation )* ^( NAME $name) ^( BODY ( declarational_statement )* system_statement ) )
			{
				// Grasp.g:136:7: ^( ARCHITECTURE[$kw] ( annotation )* ^( NAME $name) ^( BODY ( declarational_statement )* system_statement ) )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(ARCHITECTURE, kw), root_1);
				// Grasp.g:136:27: ( annotation )*
				while ( stream_annotation.hasNext() ) {
					adaptor.addChild(root_1, stream_annotation.nextTree());
				}
				stream_annotation.reset();

				// Grasp.g:136:39: ^( NAME $name)
				{
				CommonTree root_2 = (CommonTree)adaptor.nil();
				root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(NAME, "NAME"), root_2);
				adaptor.addChild(root_2, stream_name.nextNode());
				adaptor.addChild(root_1, root_2);
				}

				// Grasp.g:136:53: ^( BODY ( declarational_statement )* system_statement )
				{
				CommonTree root_2 = (CommonTree)adaptor.nil();
				root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(BODY, "BODY"), root_2);
				// Grasp.g:136:60: ( declarational_statement )*
				while ( stream_declarational_statement.hasNext() ) {
					adaptor.addChild(root_2, stream_declarational_statement.nextTree());
				}
				stream_declarational_statement.reset();

				adaptor.addChild(root_2, stream_system_statement.nextTree());
				adaptor.addChild(root_1, root_2);
				}

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "architecture_statement"


	public static class declarational_statement_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "declarational_statement"
	// Grasp.g:138:1: declarational_statement : ( requirement_statement | qattribute_statement | template_statement | rationale_statement );
	public final GraspParser.declarational_statement_return declarational_statement() throws RecognitionException {
		GraspParser.declarational_statement_return retval = new GraspParser.declarational_statement_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope requirement_statement8 =null;
		ParserRuleReturnScope qattribute_statement9 =null;
		ParserRuleReturnScope template_statement10 =null;
		ParserRuleReturnScope rationale_statement11 =null;

